# pi

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPING.md  HANDOFF-10B.md  IMPLEMENTATION.md  MATH.md  README.md  RUNBOOK.md
config/: laptop.toml  server-128gb.toml  server-massive.toml
crates/bignum/: Cargo.toml
crates/bignum/examples/: bench_sqrt.rs
crates/bignum/src/: config.rs  float.rs  integer.rs  lib.rs  ntt.rs  storage.rs
crates/pi-cli/: Cargo.toml
crates/pi-cli/src/: config_gen.rs  hardware.rs  main.rs  verify_hex.rs
crates/pi-core/: Cargo.toml
crates/pi-core/examples/: phase_bench.rs
crates/pi-core/src/: bbp.rs  config.rs  lib.rs  output.rs  perf.rs  precision.rs  progress.rs
crates/pi-core/src/algorithm/: chudnovsky.rs  gauss_legendre.rs  mod.rs  util.rs
