[package]
name = "pi-cli"
description = "Command-line interface for computing pi."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-core.workspace = true
anyhow.workspace = true
bignum.workspace = true
clap.workspace = true
ctrlc.workspace = true
indicatif.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
toml.workspace = true
